--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,11 @@
    <meta charset="UTF-8" />
    <title>Hack Roulette!</title>
     <script src='js/three.min.js'></script>
+    <script src='js/OrbitControls.js'></script>
+    <style>
+      body { margin: 0; }
+      canvas { width: 100%; height: 100% }
+    </style>
   </head>
   <body>
     <script src='scene/fitomoScene.js'>
